--- a/.github/workflows/content-api.yml
+++ b/.github/workflows/content-api.yml
@@ -19,9 +19,9 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
   imageRepository: 'content-api'
-  resourceGroupName: 'Fabmedical-[SHORT_SUFFIX]'
-  containerRegistryName: 'fabmedical[SHORT_SUFFIX]'
-  containerRegistry: 'fabmedical[SHORT_SUFFIX].azurecr.io'
+  resourceGroupName: 'Fabmedical-228844'
+  containerRegistryName: 'acr228844'
+  containerRegistry: 'acr228844.azurecr.io'
   dockerfilePath: './content-api'
   tag: '${{ github.run_id  }}'
 
